; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_hal.c_spi_hal_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_hal.c_spi_hal_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }
%struct.TYPE_5__ = type { i32* }

@spi_periph_signal = common dso_local global %struct.TYPE_6__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spi_hal_init(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = call i32 @memset(%struct.TYPE_5__* %6, i32 0, i32 8)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** @spi_periph_signal, align 8
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  store i32* %14, i32** %16, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @spi_ll_master_init(i32* %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @spi_ll_enable_int(i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @spi_ll_set_int_stat(i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @spi_ll_set_mosi_delay(i32* %23, i32 0, i32 0)
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @spi_ll_master_init(i32*) #1

declare dso_local i32 @spi_ll_enable_int(i32*) #1

declare dso_local i32 @spi_ll_set_int_stat(i32*) #1

declare dso_local i32 @spi_ll_set_mosi_delay(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
